--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Homework 10</title>
   </head>
   <body>
+    Please, enter a country
     <input type="text" id="search-box" />
     <ul class="country-list"></ul>
     <div class="country-info"></div>
